--- a/src/assets/scss/modules/blocks/_header.scss
+++ b/src/assets/scss/modules/blocks/_header.scss
@@ -1,8 +1,11 @@
 .header{
     height: 400px;
-    background: url(../img/bg.jpg);
+    background: url(../img/bg.jpg) no-repeat center;
     background-size: cover;
     background-repeat: no-repeat;
     color: $white;
     text-align: center;
+    img{
+        height: 100%;
+    }
 }
