--- a/src/assets/scss/utils/myVars.scss
+++ b/src/assets/scss/utils/myVars.scss
@@ -2,3 +2,6 @@ $body-bg: #f8f8f8;
 $pagination-color: black;
 $pagination-active-color: white;
 $pagination-active-bg: red;
+$nav-link-padding-x: 0rem;
+
+$link-color: #17a2b8;
