--- a/src/assets/scss/modules/blocks/_header.scss
+++ b/src/assets/scss/modules/blocks/_header.scss
@@ -5,7 +5,21 @@
     background-repeat: no-repeat;
     color: $white;
     text-align: center;
-    img{
-        height: 100%;
+    
+    @media (max-width: 1199px){
+        .display-2{
+            font-size: 3.5rem
+        }
+    }
+    @media (max-width: 991px){
+        .display-2{
+            font-size: 3rem
+        }
+    }
+    @media (max-width: 762px){
+        height: 300px;
+        .display-2{
+            font-size: 2rem
+        }
     }
 }
